# flexiglob

./: .gitignore  Cargo.toml  README.md  flexiglob.code-workspace
.claude/: settings.local.json
docs/: implementation_plan.md
examples/error_reporting/: main.rs
examples/greater_than/: main.rs
examples/run_with_trace/: main.rs
examples/sort_size/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_target/: 001_leaf_glob  002_double_wildcard  003_question_mark  004_bracket_set  005_negated_bracket  006_reverse_operator  007_nested_operators  008_filter_operator  009_escaped_wildcard  010_invalid_pattern
fuzz/fuzz_targets/: fuzz_target.rs
src/: fs.rs  globber.rs  lib.rs  matcher.rs  operator.rs  parser.rs
tests/: flexiglob_fuzz.dict  integration.rs
